#10670: Address human review feedback on AGENTS.md
Fix the mangled JVM example under Repository-Specific Considerations
(unterminated quote, Windows path syntax in a bash-fenced block,
missing --enable-preview), add explicit PR target-branch guidance
(develop is the active integration branch despite master being
GitHub's reported default), and note that runJP2.bat/runWSQ.bat omit
--enable-preview even though it's required at runtime.

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>